# sam-remote-zfs-unlocker

./: .gitignore  Cargo.toml  README.md
common/: Cargo.toml
common/src/: config.rs  lib.rs  traits.rs  types.rs
common/src/api/: api_wrapper.rs  mock.rs  mod.rs  routed.rs  sleeper.rs  traits.rs  wasm_request.rs
docker/frontend/: Dockerfile  zfs-unlocker.conf
frontend/: Cargo.toml  index.html  web.toml
frontend/public/: app-config.toml.example  web.toml
frontend/src/: images.rs  loading.rs  main.rs
frontend/src/app/: browser_helpers.rs  cmds.rs  command_communicator.rs  config_reader.rs  dataset_state_retriever.rs  mod.rs  modal.rs  zfs.rs
frontend/src/zfs_unlocker/: mod.rs  remote_retriever.rs  zfs.rs
src/: main.rs
webserver/: Cargo.toml
webserver-lib/: Cargo.toml  api-config.toml  api-config.toml.example
webserver-lib/src/: command_caller.rs  commands.rs  custom_commands.rs  lib.rs  state.rs  zfs.rs
webserver-lib/src/backend/: command_caller.rs  error.rs  live.rs  mod.rs  routable_command.rs  traits.rs
webserver-lib/src/run_options/: config.rs  mod.rs  server_run_options.rs
webserver-runner/: Cargo.toml
webserver-runner/src/: main.rs
webserver/src/: lib.rs  main.rs
