[package]
name = "zfs-remote-unlocker"
description = "Software that can remotely unlock ZFS drives through a web page"
readme = "README.md"
license = "MIT"
version = "0.1.0"
authors = ["Samer Afach"]
edition = "2021"

[workspace.package]
edition = "2021"
rust-version = "1.75"
version = "0.1.0"
license = "MIT"

[workspace]
members = [
   "common",
   "frontend",
   "webserver-lib",
   "webserver-runner",
]

default-members = [
    "webserver-runner",
]

[dependencies]


[workspace.dependencies]
async_channel_io = "0.3"
async-trait = "0.1"
axum = "0.7"
clap = "4.5"
gloo-timers = { version = "0.3.0" }
log = "0.4"
hyper = "1.0"
sam-zfs-unlocker = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.39", features = ["full"] }
tower-http-axum = { version = "0.5", package = "tower-http" }
tracing = "0.1"
tracing-subscriber = "0.3"
wasm-bindgen-futures = "0.4"
