[package]
name = "zfs-remote-unlocker"
description = "Software that can remotely unlock ZFS drives through a web page"
readme = "README.md"
license = "MIT"
version = "0.1.0"
authors = ["Samer Afach"]
edition = "2021"

[workspace.package]
edition = "2021"
rust-version = "1.80"
version = "0.1.0"
license = "MIT"

[workspace]
members = [
   "common",
   "frontend",
   "webserver-lib",
   "webserver",
]

default-members = [
    "webserver",
]

[dependencies]


[workspace.dependencies]
async_channel_io = "0.3"
async-trait = "0.1"
axum = "0.7"
blake2 = "0.10"
clap = "4.5"
gloo-timers = { version = "0.3.0" }
log = "0.4"
hex = "0.4"
hyper = "1.0"
rand = "0.8"
reqwasm = "0.5"
sam-zfs-unlocker = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.39", features = ["full"] }
toml = "0.8"
tower-http-axum = { version = "0.5", package = "tower-http" }
tracing = "0.1"
tracing-subscriber = "0.3"
wasm-bindgen-futures = "0.4"

[profile.dev]
panic = "abort" # prevent panic catching (mostly for the tokio runtime)

[profile.release]
panic = "abort" # prevent panic catching (mostly for the tokio runtime)

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -2 }
nursery = { level = "deny", priority = -3 }
unwrap_used = { level = "deny", priority = -1 }
