[package]
name = "common"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
gloo-timers = { workspace = true, features = ["futures"]}
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "1.0"
wasm-bindgen-futures = { workspace = true }
async_channel_io = { workspace = true }
