[package]
name = "common"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
async_channel_io = { workspace = true }
async-trait = { workspace = true }
gloo-timers = { workspace = true, features = ["futures"] }
gloo-utils = "0.2"
rand = { workspace = true }
reqwasm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
wasm-bindgen-futures = { workspace = true }
