[package]
name = "frontend"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
console_error_panic_hook = "0.1"
futures = "0.3"
leptos = { version = "0.6", features = ["csr"] }
reqwasm = "0.5"
thiserror = "1.0"

wasm-bindgen-futures = { workspace = true }

common = { path = "../common/" }
