[package]
name = "frontend"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
base64 = "0.22"
console_error_panic_hook = "0.1"
http = "1.1"
futures = "0.3"
icondata = "0.4"
leptos = { version = "0.6", features = ["csr"] }
leptos_icons = "0.3"
rand = "0.8"
reqwasm = "0.5"
thiserror = "1.0"
web-sys = { version = "0.3", features = ["DomRect"] }

wasm-bindgen-futures = { workspace = true }

common = { path = "../common/" }
