[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
blake2 = { workspace = true }
hex = { workspace = true }
hyper = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
sam-zfs-unlocker = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "time"] }
tower-http-axum = { workspace = true, features = ["cors", "trace"] }
toml = { workspace = true }

clap = { workspace = true, features = ["derive"] }
common = { path = "../common/" }
