[package]
name = "webserver-runner"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
api-server = { path = "../webserver-lib" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

log = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
